@@ -3,9 +3,11 @@ Laurent Sansonetti <lsansonetti@apple.com>
 
 Contributors:
 Aaron Patterson <aaron.patterson@gmail.com>
+Carlos Villela <carlos.villela@gmail.com>
 James MacAulay <jmacaulay@gmail.com>
 Michael Pruett <michael@68k.org>
 Michail Pishchagin <mblsha@gmail.com>
+Mike Naberezny <mike@maintainable.com>
 Sebastian Delmont <sd@notso.net>
 Stefan Saasen <s@juretta.com>
 Terry Donoghue <donoghue@apple.com>
